<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:rowCount="6"
    tools:context="ru.nt202.chessrobotandroidapplication.view.SettingsActivity">

    <!---->

    <TextView
        android:id="@+id/textViewStrength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:fontFamily="cursive"
        android:text="@string/strength"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBarStrength"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="8dp"
        android:progress="100"
        app:layout_constraintBottom_toBottomOf="@+id/textViewStrengthValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewStrengthValue" />

    <TextView
        android:id="@+id/textViewStrengthValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:text="100"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewStrength"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewStrength"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText,MissingConstraints" />

    <!---->


    <TextView
        android:id="@+id/textViewServerIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:fontFamily="cursive"
        android:text="@string/server_ip"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStrength" />

    <EditText
        android:id="@+id/editTextIP"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="cursive"
        android:inputType="textPersonName"
        android:text="192.168.42.3"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewServerIP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewServerIP"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="HardcodedText,MissingConstraints" />

    <!---->
    <TextView
        android:id="@+id/textViewPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:fontFamily="cursive"
        android:text="@string/server_port"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewServerIP" />

    <EditText
        android:id="@+id/editTextPort"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="cursive"
        android:inputType="number"
        android:text="8080"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewPort"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="HardcodedText,MissingConstraints" />

    <!---->

    <TextView
        android:id="@+id/textViewMotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:fontFamily="cursive"
        android:text="@string/motion_detector"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPort" />

    <Switch
        android:id="@+id/switchAutoMotionDetector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewMotion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewMotion"
        app:layout_constraintVertical_bias="0.0" />

    <!---->

    <TextView
        android:id="@+id/textViewDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:fontFamily="cursive"
        android:text="@string/duration"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMotion" />

    <Spinner
        android:id="@+id/spinnerDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDuration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewDuration"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>